--- a/rapidsmsrw1000/local.py.example
+++ b/rapidsmsrw1000/local.py.example
@@ -1,4 +1,4 @@
-# Sample Settings File for Local dev; copy to settings.py
+# Django settings for rapidsmsrw1000 project.
 
 import os
 
@@ -8,9 +8,9 @@ PROJECT_ROOT = os.path.abspath(os.path.join(PROJECT_PATH, os.pardir))
 
 DEBUG = True
 TEMPLATE_DEBUG = DEBUG
-TRAINING_ENV = True
-SHORTCODE = ""  # Change Me
-PRIMARY_BACKEND = ""  # Change Me
+TRAINING_ENV = False #True
+SHORTCODE = "3103"
+PRIMARY_BACKEND = 'kannel-smpp'
 SERVER_IP = '127.0.0.1'
 SERVER_PORT = '5000'
 
@@ -23,13 +23,38 @@ MANAGERS = ADMINS
 DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.mysql',
-        'NAME': 'rapidsmsrw1000',
-        'USER': '',
+        'NAME': 'rapid',
+        'USER': 'root',
         'PASSWORD': '',
         'HOST': '',
         'PORT': '',
+    },
+    'postgres': {
+        'NAME':     'thousanddays',
+        'USER':     'thousanddays',
+        'PASSWORD': 'thousanddays',
+        'HOST':     'localhost',
+        'PORT':     '',
+        'REPORTS':  'thousanddays_reports'
     }
 }
+
+import psycopg2
+__DEFAULTS    = DATABASES['postgres']
+THE_DATABASE  = psycopg2.connect(database = __DEFAULTS['NAME'],
+                                     user = __DEFAULTS['USER'],
+                                 password = __DEFAULTS['PASSWORD'],
+                                     host = __DEFAULTS['HOST'])
+
+###USE MEMCACHED
+
+#CACHES = {
+#    'default': {
+#        'BACKEND': 'django.core.cache.backends.memcached.MemcachedCache',
+#        'LOCATION': '127.0.0.1:11211',
+#    }
+#}
+
 
 # Local time zone for this installation. Choices can be found here:
 # http://en.wikipedia.org/wiki/List_of_tz_zones_by_name
@@ -57,7 +82,7 @@ USE_TZ = True
 
 # Absolute filesystem path to the directory that will hold user-uploaded files.
 # Example: "/home/media/media.lawrence.com/media/"
-MEDIA_ROOT = os.path.join(PROJECT_ROOT, 'public', 'media')
+MEDIA_ROOT = os.path.join(PROJECT_PATH, 'public', 'media')
 
 # URL that handles the media served from MEDIA_ROOT. Make sure to use a
 # trailing slash.
@@ -68,7 +93,7 @@ MEDIA_URL = '/media/'
 # Don't put anything in this directory yourself; store your static files
 # in apps' "static/" subdirectories and in STATICFILES_DIRS.
 # Example: "/home/media/media.lawrence.com/static/"
-STATIC_ROOT = os.path.join(PROJECT_ROOT, 'public', 'static')
+STATIC_ROOT = os.path.join(PROJECT_PATH, 'public', 'static')
 
 # URL prefix for static files.
 # Example: "http://media.lawrence.com/static/"
@@ -77,6 +102,7 @@ STATIC_URL = '/static/'
 # Additional locations of static files
 STATICFILES_DIRS = (
     os.path.join(PROJECT_PATH, 'static'),
+    
 )
 
 # List of finder classes that know how to find static files in
@@ -88,7 +114,7 @@ STATICFILES_FINDERS = (
 )
 
 # Make this unique, and don't share it with anybody.
-SECRET_KEY = 'g!o1l3%de%-eonb74*0k668%3r$d3^_ytq=#4p#8*1@e3(akji'
+SECRET_KEY = 'hei&amp;p)mzo_k(ydn&amp;1mt0i%d8f%li22wk^ka_d^(1h2o3@lg(n9'
 
 # List of callables that know how to import templates from various sources.
 TEMPLATE_LOADERS = (
@@ -114,16 +140,21 @@ MIDDLEWARE_CLASSES = (
     'django.contrib.auth.middleware.AuthenticationMiddleware',
     'django.contrib.messages.middleware.MessageMiddleware',
     'django.middleware.clickjacking.XFrameOptionsMiddleware',
+#    'django.middleware.cache.UpdateCacheMiddleware',
+#    'django.middleware.common.CommonMiddleware',
+#    'django.middleware.cache.FetchFromCacheMiddleware',
 )
 
 ROOT_URLCONF = 'rapidsmsrw1000.urls'
-
+#BASE_TEMPLATE = 'layout.html'
 # Python dotted path to the WSGI application used by Django's runserver.
 WSGI_APPLICATION = 'rapidsmsrw1000.wsgi.application'
 
 TEMPLATE_DIRS = (
     os.path.join(PROJECT_PATH, 'templates'),
     os.path.join(PROJECT_PATH, 'rapidsmsrw1000/webapp/templates'),
+    
+    
 )
 
 FIXTURE_DIRS = (
@@ -188,28 +219,48 @@ INSTALLED_APPS = (
     'django.contrib.messages',
     'django.contrib.staticfiles',
     'django.contrib.admin',
+    'flexselect',
+    #'django.contrib.humanize',
     # External apps
     "django_nose",
     "djtables",
     "rapidsms",
     "rapidsms.contrib.handlers",
     "rapidsms.contrib.default",
-    #Developed apps
-    "rapidsmsrw1000.apps.ambulances",
-    "rapidsmsrw1000.apps.chws",
-    "rapidsmsrw1000.apps.ubuzima",
-    "rapidsmsrw1000.apps.webapp",
+    # "rapidsms.contrib.export",      # TODO: Re-enable?
+    #"rapidsms.contrib.httptester",
+    #"rapidsms.contrib.locations",
+    #"rapidsms.contrib.messagelog",
+    #"rapidsms.contrib.messaging",
+    #"rapidsms.contrib.registration",
+    #"rapidsms.contrib.scheduler",
+    #"rapidsms.contrib.echo",
 
-    # ???
-    "rapidsmsrw1000.apps.httptester",
-    "rapidsmsrw1000.apps.messagelog",
-    # "rapidsmsrw1000.apps.locations",
-    # "rapidsmsrw1000.apps.parsers",
-    # "rapidsmsrw1000.apps.patterns",
-    # "rapidsmsrw1000.apps.reporters",
-    # "rapidsmsrw1000.apps.thousanddays",
-
+	#DEVELOPED APPS
+	
+	"rapidsmsrw1000.apps.thoureport",
+	"rapidsmsrw1000.apps.ubuzima",
+	#"rapidsmsrw1000.apps.locations",
+	#"rapidsmsrw1000.apps.reporters",
+	#"rapidsmsrw1000.apps.patterns",
+	#"rapidsmsrw1000.apps.parsers",
+	"rapidsmsrw1000.apps.chws",
+	"rapidsmsrw1000.apps.ambulances",
+	"rapidsmsrw1000.apps.webapp",
+	#"rapidsmsrw1000.apps.thousanddays",
+	#"rapidsmsrw1000.apps.logger",
+	"rapidsmsrw1000.apps.httptester",
+	"rapidsmsrw1000.apps.messagelog",
+	"rapidsmsrw1000.apps.api.rhea",
+	"rapidsmsrw1000.apps.api.nutrition",
+	
+	
 )
+
+KANNEL_CONF = {'kannel_host':'127.0.0.1',
+		 'kannel_port':13013, 
+			'kannel_password':'kannel_smpp',
+			 'kannel_username':'kannel_smpp'}
 
 INSTALLED_BACKENDS = {
     "message_tester": {
@@ -221,12 +272,25 @@ INSTALLED_BACKENDS = {
         "sendsms_url": "http://127.0.0.1:13013/cgi-bin/sendsms",
         "sendsms_params": {"smsc": "smpp",
                            "from": SHORTCODE, # not set automatically by SMSC
-                           "username": "CHANGEME",
-                           "password": "CHANGEME"}, # or set in localsettings.py
+                           "username": "kannel_smpp",
+                           "password": "kannel_smpp"}, # or set in localsettings.py
         "coding": 0,
         "charset": "ascii",
         "encode_errors": "ignore", # strip out unknown (unicode) characters
     },
+}
+
+RHEA = {'api': { 	#'host' : '41.74.172.115', 
+			'host': '197.243.18.22',
+			'key_file' : 'mule.pem',
+			'cer_file ': 'mule.cer',
+			'port' : 5000,
+			'level' : 'info',
+			'file' : '/var/log/rheaapi.log',
+			'timeout' : '10',
+			'group' : 'RHEA',
+			'user' : 'svr_rapidsms',
+			'pass' : 'pCBv5r7MLYO3', }
 }
 
 # this rapidsms-specific setting defines which views are linked by the
@@ -241,4 +305,13 @@ RAPIDSMS_TABS = [
     #("rapidsms.contrib.httptester.views.generate_identity", "Message Tester"),
 ]
 
+
+#### ALLOW DJANGO FLEXIBLE SELECTION OPTIONS
+
+FLEXSELECT = {
+    'include_jquery': True,
+}
+
+
 LOGIN_REDIRECT_URL = '/'
+
